replaces tmdb library used